--- a/tasks/update-windows.yml
+++ b/tasks/update-windows.yml
@@ -1,11 +1,11 @@
 ---
-- name: (Windows) Install Updates
+- name: Install Updates
   win_updates:
     reboot: no
     state: installed
   register: updates_installed
 
-- name: (Windows) Reboot and Reconnect
+- name: Reboot and Reconnect
   win_reboot:
     pre_reboot_delay: 15
     post_reboot_delay: 60
